# personal_finance_tool-rs

./: Cargo.toml  README.md
src/: main.rs
src/analysis/: mod.rs
src/cli/: commands.rs  mod.rs
src/models/: budget.rs  category.rs  mod.rs  transaction.rs
src/storage/: backup.rs  file_handler.rs  mod.rs
src/utils/: mod.rs  validation.rs
